--- a/style.css
+++ b/style.css
@@ -82,8 +82,8 @@
     box-shadow: 0 0 0 0.15rem #5ceace;
   }
 
-  input[type="text"]{
-    display: none;
+  .input__order{
+    display: block;
     outline: 0;
     border: none;
     box-shadow: none;
@@ -99,7 +99,7 @@
     border-radius: 50px;
     transition: color .2s ease,background-color .2s ease,box-shadow .2s ease;
   }
-  input[type="text"]:focus{
+  .input__order:focus{
     color: #212529;
     background-color: #fff;
     border-color: #86b7fe;
