--- a/style.css
+++ b/style.css
@@ -1,108 +1,138 @@
-  .card {
-    width: 225px;
-    min-height: 200px;
-    box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.3);
-    display: flex;
-    flex-direction: column; /* Размещаем элементы в колонку */
-    border-radius: 30px;
-    transition: 0.2s;
-    position: relative;
-    background-color: #BFDBFE;
-  }
+body {
+  background-image: url('back_body.jpg'); /* Путь к вашему фоновому изображению */
+  background-size: cover; /* Покрывает весь экран */
+  background-repeat: no-repeat; /* Не повторяет изображение */
+  background-attachment: fixed; /* Фиксирует изображение при скроллинге */
+  background-position: center; /* Выравнивает изображение по центру */
+  display: flex;
+  justify-content: center;
+}
 
-  /* При наведении на карточку - меняем цвет тени */
-  .card:hover {
+.cards {
+  display: grid;
+  /* Автоматически заполняем на всю ширину grid-контейнера */
+  grid-template-columns: repeat(auto-fill, 225px);
+  width: 100%;
+  max-width: 1000px; /* Ширина grid-контейнера */
+  justify-content: center;
+  justify-items: center; /* Размещаем карточку по центру */
+  column-gap: 30px; /* Отступ между колонками */
+  row-gap: 40px; /* Отступ между рядами */
+  margin: 0 auto;
+}
+
+.card {
+  width: 225px;
+  min-height: 200px;
+  box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.3);
+  display: flex;
+  flex-direction: column;
+  /* Размещаем элементы в колонку */
+  border-radius: 30px;
+  transition: 0.2s;
+  position: relative;
+  background-color: #BFDBFE;
+  background-color: rgba(255, 255, 255, 0.25)
+}
+
+/* При наведении на карточку - меняем цвет тени */
+.card:hover {
   box-shadow: 4px 8px 16px rgba(15, 0, 74, 0.3);
-  }
-  
-  .card__top {
-    flex: 0 0 180px; /* Задаем высоту 220px, запрещаем расширение и сужение по высоте */
-    position: relative;
-    overflow: hidden; /* Скрываем, что выходит за пределы */
-  }
-  
-  /* Контейнер для картинки */
-  .card__image {
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-  }
-  
-  .card__image > img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain; /* Встраиваем картинку в контейнер card__image */
-    transition: 0.2s;
-  }
-  
-  /* При наведении - увеличиваем картинку */
-  .card__image:hover > img {
-    transform: scale(1.1);
-  }
-    
-  .card__bottom {
-    display: flex;
-    flex-direction: column;
-    flex: 1 0 auto; /* Занимаем всю оставшуюся высоту карточки */
-    padding: 5px;
-  }
-  
-  .product_title{
-    font-style: oblique;
-    text-align: center;
-    font-size: 18px;
-    font-weight: 200;
-    margin-bottom: 5px;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
-    color: rgba(78, 78, 78)
-  }
- 
-  .card__add {
-    display: block;
-    outline: 0;
-    border: none;
-    box-shadow: none;
-    cursor: pointer;
-    padding: 9px 22px;
-    font-size: 18px;
-    height: 40px;
-    font-weight: 400;
-    color: #fff;
-    text-align: center;
-    line-height: normal;
-    background: linear-gradient(90deg,#5522fa 0,#0074e4 100%);
-    border-radius: 50px;
-    transition: color .2s ease,background-color .2s ease,box-shadow .2s ease;
-  }
-  
-  .card__add:hover {
-    box-shadow: 0 0 0 0.15rem #5ceace;
-  }
+}
 
-  .input__order{
-    display: block;
-    outline: 0;
-    border: none;
-    box-shadow: none;
-    cursor: pointer;
-    padding: 9px 22px;
-    font-size: 18px;
-    height: 20px;
-    font-weight: 400;
-    color: #fff;
-    text-align: center;
-    line-height: normal;
-    background: linear-gradient(90deg,#5522fa 0,#0074e4 100%);
-    border-radius: 50px;
-    transition: color .2s ease,background-color .2s ease,box-shadow .2s ease;
-  }
-  .input__order:focus{
-    color: #212529;
-    background-color: #fff;
-    border-color: #86b7fe;
-    outline: 0;
-    box-shadow: 0 0 0 0.25rem rgb(13 110 253 / 25%);
-  }
+.card__top {
+  flex: 0 0 180px;
+  /* Задаем высоту 220px, запрещаем расширение и сужение по высоте */
+  position: relative;
+  overflow: hidden;
+  /* Скрываем, что выходит за пределы */
+}
+
+/* Контейнер для картинки */
+.card__image {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.card__image>img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  /* Встраиваем картинку в контейнер card__image */
+  transition: 0.2s;
+}
+
+/* При наведении - увеличиваем картинку */
+.card__image:hover>img {
+  transform: scale(1.1);
+}
+
+.card__bottom {
+  display: flex;
+  flex-direction: column;
+  flex: 1 0 auto;
+  /* Занимаем всю оставшуюся высоту карточки */
+  padding: 5px;
+}
+
+.product_title {
+  font-style: normal;
+  text-align: center;
+  font-size: 18px;
+  font-weight: 200;
+  margin-bottom: 5px;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+  color: rgb(255, 255, 255)
+}
+
+.card__add {
+  display: block;
+  outline: 0;
+  border: none;
+  box-shadow: none;
+  cursor: pointer;
+  padding: 9px 22px;
+  font-size: 18px;
+  height: 40px;
+  font-weight: 400;
+  color: #fff;
+  text-align: center;
+  line-height: normal;
+  background: linear-gradient(90deg, #5522fa 0, #0074e4 100%);
+  border-radius: 50px;
+  transition: color .2s ease, background-color .2s ease, box-shadow .2s ease;
+}
+
+.card__add:hover {
+  box-shadow: 0 0 0 0.15rem #5ceace;
+}
+
+.input__order {
+  display: block;
+  outline: 0;
+  border: none;
+  box-shadow: none;
+  cursor: pointer;
+  padding: 9px 22px;
+  font-size: 18px;
+  height: 20px;
+  font-weight: 400;
+  color: #fff;
+  text-align: center;
+  line-height: normal;
+  background: linear-gradient(90deg, #5522fa 0, #0074e4 100%);
+  border-radius: 50px;
+  transition: color .2s ease, background-color .2s ease, box-shadow .2s ease;
+}
+
+.input__order:focus {
+  color: #212529;
+  background-color: #fff;
+  border-color: #86b7fe;
+  outline: 0;
+  box-shadow: 0 0 0 0.25rem rgb(13 110 253 / 25%);
+}
