--- a/style.css
+++ b/style.css
@@ -5,31 +5,83 @@ body {
   background-repeat: no-repeat; /* Не повторяет изображение */
   background-attachment: fixed; /* Фиксирует изображение при скроллинге */
   background-position: center; /* Выравнивает изображение по центру */
-  display: flex;
+  display:grid;
   justify-content: center;
+}
+h1 {
+  position: relative;
+  padding: 0;
+  margin: 0;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 300;
+  font-size: 40px;
+  color: #ffffff;
+  -webkit-transition: all 0.4s ease 0s;
+  -o-transition: all 0.4s ease 0s;
+  transition: all 0.4s ease 0s;
+  margin-bottom: 20px;
+}
+
+h1 span {
+  display: block;
+  font-size: 0.5em;
+  line-height: 1.3;
+}
+h1 em {
+  font-style: normal;
+  font-weight: 600;
+}
+/* === HEADING STYLE #3 === */
+.three h1 {
+  font-size: 28px;
+  font-weight: 500;
+  letter-spacing: 0;
+  line-height: 1.5em;
+  padding-bottom: 15px;
+  position: relative;
+}
+.three h1:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 5px;
+  width: 55px;
+  background-color: #b7ff00;
+}
+.three h1:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 2px;
+  height: 1px;
+  width: 95%;
+  max-width: 100%;
+  background-color: #ffffff;
 }
 
 .cards {
   display: grid;
   /* Автоматически заполняем на всю ширину grid-контейнера */
-  grid-template-columns: repeat(auto-fill, 180px);
+  grid-template-columns: repeat(auto-fill, 160px);
   width: 100%;
-  max-width: 400px; /* Ширина grid-контейнера */
+  max-width: 1000px; /* Ширина grid-контейнера */
   justify-content: center;
   justify-items: center; /* Размещаем карточку по центру */
-  column-gap: 30px; /* Отступ между колонками */
-  row-gap: 40px; /* Отступ между рядами */
+  column-gap: 15px; /* Отступ между колонками */
+  row-gap: 20px; /* Отступ между рядами */
   margin: 0 auto;
+  margin-bottom: 20px;
 }
 
 .card {
-  width: 180px;
-  min-height: 200px;
+  width: 160px;
+  min-height: 160px;
   box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.3);
   display: flex;
   flex-direction: column;
   /* Размещаем элементы в колонку */
-  border-radius: 30px;
+  border-radius: 20px;
   transition: 0.2s;
   position: relative;
   background-color: #BFDBFE;
@@ -42,7 +94,7 @@ body {
 }
 
 .card__top {
-  flex: 0 0 180px;
+  flex: 0 0 150px;
   /* Задаем высоту 220px, запрещаем расширение и сужение по высоте */
   position: relative;
   overflow: hidden;
@@ -83,6 +135,8 @@ body {
 .product_title {
   font-style: normal;
   text-align: center;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 24px;
   font-size: 18px;
   font-weight: 200;
   margin-bottom: 5px;
@@ -106,6 +160,8 @@ body {
   background: linear-gradient(90deg, #5522fa 0, #0074e4 100%);
   border-radius: 50px;
   transition: color .2s ease, background-color .2s ease, box-shadow .2s ease;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
 }
 
 .card__add:hover {
