--- a/style.css
+++ b/style.css
@@ -55,37 +55,32 @@ h1 em {
   left: 0;
   bottom: 2px;
   height: 1px;
-  width: 95%;
+  width: 100%;
   max-width: 100%;
   background-color: #ffffff;
 }
 
-.cards {
-  display: grid;
-  /* Автоматически заполняем на всю ширину grid-контейнера */
-  grid-template-columns: repeat(auto-fill, 160px);
-  width: 100%;
-  max-width: 1000px; /* Ширина grid-контейнера */
-  justify-content: center;
-  justify-items: center; /* Размещаем карточку по центру */
-  column-gap: 15px; /* Отступ между колонками */
-  row-gap: 20px; /* Отступ между рядами */
-  margin: 0 auto;
-  margin-bottom: 20px;
+.container {
+  max-width: 1200px;
+  display: flex;
+  flex-wrap: wrap; /* Карточки занимают новую строку, когда нет места в текущей */
+  justify-content: flex-start; /* Карточки выравниваются по левому краю */
+  gap: 15px; /* Отступы между карточками */
+  padding: 10px; /* Отступы внутри контейнера */
+  box-sizing: border-box; /* Включаем padding и border в ширину и высоту элементов */
 }
 
 .card {
-  width: 160px;
+  flex: 0 0 160px; /* Карточки фиксированной ширины 160px и не растягиваются */
   min-height: 160px;
   box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.3);
   display: flex;
   flex-direction: column;
-  /* Размещаем элементы в колонку */
   border-radius: 20px;
   transition: 0.2s;
-  position: relative;
   background-color: #BFDBFE;
-  background-color: rgba(255, 255, 255, 0.25)
+  background-color: rgba(255, 255, 255, 0.25);
+  box-sizing: border-box; /* Включаем padding и border в ширину и высоту элемента */
 }
 
 /* При наведении на карточку - меняем цвет тени */
@@ -158,7 +153,7 @@ h1 em {
   text-align: center;
   line-height: normal;
   background: linear-gradient(90deg, #5522fa 0, #0074e4 100%);
-  border-radius: 50px;
+  border-radius: 40px;
   transition: color .2s ease, background-color .2s ease, box-shadow .2s ease;
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
@@ -174,17 +169,20 @@ h1 em {
   border: none;
   box-shadow: none;
   cursor: pointer;
+  width: 70%; /* Установка ширины */
+  height: 70%; /* Установка высоты */
   padding: 9px 22px;
   font-size: 18px;
-  height: 20px;
   font-weight: 400;
   color: #fff;
   text-align: center;
-  line-height: normal;
+  line-height: 40px;
   background: linear-gradient(90deg, #5522fa 0, #0074e4 100%);
-  border-radius: 50px;
+  border-radius: 40px;
   transition: color .2s ease, background-color .2s ease, box-shadow .2s ease;
 }
+
+
 
 .input__order:focus {
   color: #212529;
