--- a/style.css
+++ b/style.css
@@ -200,6 +200,7 @@ h1 em {
   background-color: #BFDBFE;
   background-color: rgba(255, 255, 255, 0.25);
   border-radius: 10px;
+  display: none;
 }
 
 .header {
@@ -210,9 +211,14 @@ h1 em {
   margin-left: 20px;
 }
 
-.header b {
+.header b{
   font-size: 18px;
   color: #fff;
+}
+.container__order h3 {
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: #fff;
+  font-size: 14px;
 }
 
 .order-item {
@@ -256,3 +262,32 @@ h1 em {
   transition: color .2s ease, background-color .2s ease, box-shadow .2s ease;
 }
 
+.sticky-button {
+  position: fixed; /* Для Safari */
+  position: sticky;       /* Позиционирование sticky */
+  bottom: 0;              /* Положение внизу */
+  padding: 10px 20px;     /* Внутренние отступы */
+  background-color: #007bff;  /* Цвет фона */
+  color: #fff;            /* Цвет текста */
+  border: none;           /* Убрать границу */
+  border-radius: 5px;     /* Скругленные углы */
+  cursor: pointer;        /* Курсор при наведении */
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); /* Тень */
+  width: 100%;
+  background: linear-gradient(90deg, #5522fa 0, #0074e4 30%);
+  height: 50px;
+  border-radius: 10px;
+}
+
+.sticky-button::before {
+  content: "\f07a"; /* Здесь используется FontAwesome Unicode для корзины */
+  font-family: "Font Awesome 5 Free"; /* Шрифт FontAwesome */
+  font-weight: 900; /* Вес шрифта FontAwesome */
+  color: #fff; /* Цвет иконки */
+  font-size: 24px; /* Размер иконки */
+  position: absolute;
+  top: 50%; /* Центровка по вертикали */
+  left: 50%; /* Центровка по горизонтали */
+  transform: translate(-50%, -50%); /* Корректировка центровки */
+  
+}
