--- a/static/style.css
+++ b/static/style.css
@@ -14,7 +14,7 @@ body {
 
 .container {
     max-width: 1200px;
-    margin: 2rem auto;
+    margin: 0rem auto;
     padding: 0 1rem;
     position: relative;
 }
@@ -40,7 +40,7 @@ h2 {
 }
 
 .product-card {
-    width: 160px;
+    width: 170px;
     background-color: rgba(255, 255, 255, 0.1);
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
@@ -115,6 +115,7 @@ h2 {
     z-index: 1000;
     display: none;
     border-radius: 40px;
+    margin-bottom: 10px;
 }
 
 .cart-button:hover {
