--- a/app/template/index.html
+++ b/app/template/index.html
@@ -9,7 +9,7 @@
         <!-- Добавленная навигационная панель -->
         <div class="nav-panel">
             <div class="user-info">
-                <img src="/Image/user.png" alt="Аватар пользователя" class="user-avatar" width="30" height="30">
+                <img src="/static/Image/user.png" alt="Аватар пользователя" class="user-avatar" width="30" height="30">
                 <span id="userName">Иван Петров</span>
             </div>
             <div>
@@ -39,7 +39,7 @@
                 <span class="close">&times;</span>
                 <h2>Ваша корзина</h2>
                 <div id="cartItems"></div>
-                <button onclick="sucess_order()" id="checkoutButton" class="checkout-button">Оформить заказ</button>
+                <button onclick="success_order()" id="checkoutButton" class="checkout-button">Оформить заказ</button>
             </div>
         </div>
     
