post create order

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -5,11 +5,15 @@ body {
     color: #e0e0e0;
     padding-bottom: 60px;
     background-image: url("./Image/back_body.jpg");
-    background-size: cover; /* Покрывает весь экран */
-    background-repeat: no-repeat; /* Не повторяет изображение */
-    background-attachment: fixed; /* Фиксирует изображение при скроллинге */
-    background-position: center; /* Выравнивает изображение по центру */
- 
+    background-size: cover;
+    /* Покрывает весь экран */
+    background-repeat: no-repeat;
+    /* Не повторяет изображение */
+    background-attachment: fixed;
+    /* Фиксирует изображение при скроллинге */
+    background-position: center;
+    /* Выравнивает изображение по центру */
+
 }
 
 .container {
@@ -58,7 +62,8 @@ h2 {
     display: block;
     width: 100%;
     height: 120px;
-    object-fit: contain; /* Изменено с cover на contain для полного вмещения изображения */
+    object-fit: contain;
+    /* Изменено с cover на contain для полного вмещения изображения */
 }
 
 
@@ -267,3 +272,30 @@ h2 {
     margin-right: 10px;
 }
 
+input[type="date"], [type='text'] {
+    background-color: rgba(255, 255, 255, 0.1);
+    color: white;
+    border: none;
+    padding: 0.9rem;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    font-size: 16px;
+    width: 50%;
+    border-radius: 5px;
+    height: 40px;
+}
+
+.modal-content h4 {
+    color: #ffffff;
+    border-bottom: 1px solid #4CAF50;
+    height: 16px;
+    margin-bottom: 10px;
+
+}
+
+::-webkit-calendar-picker-indicator {
+    background-color: #ffffff;
+    padding: 5px;
+    cursor: pointer;
+    border-radius: 3px;
+}
