--- a/app/template/index.html
+++ b/app/template/index.html
@@ -1,47 +1,57 @@
-<html><head>
+<html>
+
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Доставка овощей</title>
-    
-    </head>
-    <link rel="stylesheet" type="text/css" href="/static/style.css">
-    <body>
-        <!-- Добавленная навигационная панель -->
-        <div class="nav-panel">
-            <div class="user-info">
-                <img src="/static/Image/user.png" alt="Аватар пользователя" class="user-avatar" width="30" height="30">
-                <span id="userName">Иван Петров</span>
-            </div>
-            <div>
-                <a href="#" id="orderHistoryLink">История заказов</a>
-            </div>
+
+</head>
+<link rel="stylesheet" type="text/css" href="/static/style.css">
+
+<body>
+    <!-- Добавленная навигационная панель -->
+    <div class="nav-panel">
+        <div class="user-info">
+            <img src="/static/Image/user.png" alt="Аватар пользователя" class="user-avatar" width="30" height="30">
+            <span id="userName">Иван Петров</span>
         </div>
-    
-        <div class="container" id="peeled">
-            <h2>Чищенные овощи</h2>
-            <div class="product-grid" id="peeledGrid"></div>
+        <div>
+            <a href="#" id="orderHistoryLink">История заказов</a>
         </div>
-    
-        <div class="container" id="unpeeled">
-            <h2>Нечищенные овощи</h2>
-            <div class="product-grid" id="unpeeledGrid"></div>
+    </div>
+
+    <div class="container" id="peeled">
+        <h2>Чищенные овощи</h2>
+        <div class="product-grid" id="peeledGrid"></div>
+    </div>
+
+    <div class="container" id="unpeeled">
+        <h2>Нечищенные овощи</h2>
+        <div class="product-grid" id="unpeeledGrid"></div>
+    </div>
+
+    <button class="cart-button">
+        <svg class="cart-icon" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <path
+                d="M7 18c-1.1 0-1.99.9-1.99 2S5.9 22 7 22s2-.9 2-2-.9-2-2-2zM1 2v2h2l3.6 7.59-1.35 2.45c-.16.28-.25.61-.25.96 0 1.1.9 2 2 2h12v-2H7.42c-.14 0-.25-.11-.25-.25l.03-.12.9-1.63h7.45c.75 0 1.41-.41 1.75-1.03l3.58-6.49c.08-.14.12-.31.12-.48 0-.55-.45-1-1-1H5.21l-.94-2H1zm16 16c-1.1 0-1.99.9-1.99 2s.89 2 1.99 2 2-.9 2-2-.9-2-2-2z" />
+        </svg>
+        Корзина
+    </button>
+
+    <div id="cartModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h2>Ваша корзина</h2>
+            <div id="cartItems"></div>
+            <h4> Дата доставки </h4>
+            <input type="date" id="date_order">
+            <h4> Наименование организации </h4>
+            <input type="text" id="organization_name">
+            <button onclick="success_order()" id="checkoutButton" class="checkout-button">Оформить заказ</button>
         </div>
-    
-        <button class="cart-button">
-            <svg class="cart-icon" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                <path d="M7 18c-1.1 0-1.99.9-1.99 2S5.9 22 7 22s2-.9 2-2-.9-2-2-2zM1 2v2h2l3.6 7.59-1.35 2.45c-.16.28-.25.61-.25.96 0 1.1.9 2 2 2h12v-2H7.42c-.14 0-.25-.11-.25-.25l.03-.12.9-1.63h7.45c.75 0 1.41-.41 1.75-1.03l3.58-6.49c.08-.14.12-.31.12-.48 0-.55-.45-1-1-1H5.21l-.94-2H1zm16 16c-1.1 0-1.99.9-1.99 2s.89 2 1.99 2 2-.9 2-2-.9-2-2-2z"/>
-            </svg>
-            Корзина
-        </button>
-    
-        <div id="cartModal" class="modal">
-            <div class="modal-content">
-                <span class="close">&times;</span>
-                <h2>Ваша корзина</h2>
-                <div id="cartItems"></div>
-                <button onclick="success_order()" id="checkoutButton" class="checkout-button">Оформить заказ</button>
-            </div>
-        </div>
-    
-        <script src="/static/script.js"></script>
-    </body></html>
+    </div>
+
+    <script src="/static/script.js"></script>
+</body>
+
+</html>
