--- a/app/template/index.html
+++ b/app/template/index.html
@@ -1,4 +1,5 @@
 <html>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,9 +14,8 @@
             <img src="/static/Image/user.png" alt="Аватар пользователя" class="user-avatar" width="30" height="30">
             <span id="userName">Иван Петров</span>
         </div>
-        <div>
-            <a href="#" id="orderHistoryLink">История заказов</a>
-        </div>
+        <button onclick="order_history()" id="HistoryButton" class="H-checkout-button">История заказов</button>
+
     </div>
 
     <div class="container" id="peeled">
@@ -29,10 +29,6 @@
     </div>
 
     <button class="cart-button">
-        <svg class="cart-icon" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-            <path
-                d="M7 18c-1.1 0-1.99.9-1.99 2S5.9 22 7 22s2-.9 2-2-.9-2-2-2zM1 2v2h2l3.6 7.59-1.35 2.45c-.16.28-.25.61-.25.96 0 1.1.9 2 2 2h12v-2H7.42c-.14 0-.25-.11-.25-.25l.03-.12.9-1.63h7.45c.75 0 1.41-.41 1.75-1.03l3.58-6.49c.08-.14.12-.31.12-.48 0-.55-.45-1-1-1H5.21l-.94-2H1zm16 16c-1.1 0-1.99.9-1.99 2s.89 2 1.99 2 2-.9 2-2-.9-2-2-2z" />
-        </svg>
         Корзина
     </button>
 
@@ -49,7 +45,17 @@
         </div>
     </div>
 
+    <div id="historyModal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeHistoryModal()">&times;</span>
+            <h2>История заказов</h2>
+            <div id="historyContent"></div>
+        </div>
+    </div>
     <script src="/static/script.js"></script>
 </body>
 
 </html>
+
+
+
