--- a/app/template/index.html
+++ b/app/template/index.html
@@ -45,7 +45,7 @@
         </div>
     </div>
 
-    <div id="historyModal" class="modal">
+    <div id="historyModal" class="modalHistory">
         <div class="modal-content">
             <span class="close" onclick="closeHistoryModal()">&times;</span>
             <h2>История заказов</h2>
