--- a/app/static/style.css
+++ b/app/static/style.css
@@ -73,8 +73,12 @@ h2 {
 
 .product-name {
     font-weight: bold;
-    margin-bottom: 0.5rem;
     font-size: 0.9rem;
+}
+
+.product-description {
+    font-weight: lighter;
+    font-size: 0.8rem;
 }
 
 .add-to-cart,
@@ -149,12 +153,15 @@ h2 {
 
 .modal-content {
     background-color: #26054E;
-    margin: 10% auto;
+    margin: auto;
     padding: 20px;
-    border-radius: 10px;
-    width: 80%;
+    width: 95%;
     max-width: 600px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    box-sizing: border-box;
+    overflow: hidden;
+    
 }
 
 .close {
@@ -318,28 +325,21 @@ input[type="date"],
 #historyModal {
     display: none;
     position: fixed;
-    z-index: 1000;
+    z-index: 2000;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
-    overflow: auto;
+    overflow-y: auto; /* Вертикальная прокрутка для больших содержимых */
     background-color: rgba(0, 0, 0, 0.8);
-    justify-content: center;
-    align-items: center;
 }
 
-/* Контейнер для истории заказов */
 #historyContent {
-    background-color: transparent;
-    margin: auto;
-    padding: 5px;
-    /* Уменьшено для сокращения расстояния */
-    width: 95%;
-    /* Занимает почти всю ширину окна */
-    max-width: 800px;
-    /* Максимальная ширина для более крупных экранов */
+    width: 100%; /* Чтобы содержимое растягивалось по всей ширине */
 }
+
+
+
 
 /* Стили для каждого блока заказа */
 .order-block {
@@ -406,6 +406,3 @@ input[type="date"],
     font-weight: bold;
     margin-left: auto;
 }
-
-
-
