--- a/app/template/index.html
+++ b/app/template/index.html
@@ -15,7 +15,6 @@
             <span id="userName">Иван Петров</span>
         </div>
         <button onclick="order_history()" id="HistoryButton" class="H-checkout-button">История заказов</button>
-
     </div>
 
     <div class="container" id="peeled">
@@ -52,6 +51,8 @@
             <div id="historyContent"></div>
         </div>
     </div>
+    
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="/static/script.js"></script>
 </body>
 
