--- a/app/template/index.html
+++ b/app/template/index.html
@@ -64,7 +64,7 @@
 
         <div id="successMdl" class="successMdl">
             <div class="successMdl-header">
-              Заказ успешно оформлен!
+              Заявка успешно оформлена!
             </div>
             <div class="successMdl-content">
               <svg class="checkmark" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
@@ -74,7 +74,7 @@
               <div class="order-number">
                 Номер вашей заявки: <span id="orderNumber"></span>
               </div>
-              <p>Спасибо за ваш заказ! Мы свяжемся с вами в ближайшее время для подтверждения деталей.</p>
+              <p>Спасибо за ваш заказ! Мы уже начали подготовку ваших овощей!</p>
               <button class="close-btn">Закрыть</button>
             </div>
           </div>
