--- a/app/template/index.html
+++ b/app/template/index.html
@@ -75,14 +75,10 @@
                 Номер вашей заявки: <span id="orderNumber"></span>
               </div>
               <p>Спасибо за ваш заказ! Мы уже начали подготовку ваших овощей!</p>
-              <button class="close-btn">Закрыть</button>
+              <button onclick="closeModal()" class="close-btn">Закрыть</button>
             </div>
           </div>
     </div>
-
-
-    
-
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="/static/script.js"></script>
 </body>
