--- a/app/template/index.html
+++ b/app/template/index.html
@@ -17,8 +17,8 @@
     <div id="content" style="display: none;">
         <div class="nav-panel">
             <div class="user-info">
-                <img src="/static/Image/user.png" alt="Аватар пользователя" class="user-avatar" width="30" height="30">
-                <span id="userName">Иван Петров</span>
+                <img src="" alt="Аватар пользователя" class="user-avatar" width="30" height="30">
+                <span id="userName"></span>
             </div>
             <button onclick="order_history()" id="HistoryButton" class="H-checkout-button">История заказов</button>
         </div>
